[gd_scene load_steps=26 format=4 uid="uid://bunnlptwvw8pr"]

[ext_resource type="Script" uid="uid://vp4ly8u07miy" path="res://Scripts/world.gd" id="1_ndqic"]
[ext_resource type="Texture2D" uid="uid://t6nggttwbrl5" path="res://Assets/Images/backgroundoption.png" id="2_vqlhw"]
[ext_resource type="FontFile" uid="uid://datde377oev7l" path="res://Assets/Fonts/Peaberry/PeaberryBase.ttf" id="3_la4le"]
[ext_resource type="PackedScene" uid="uid://dpfjytluhwwx7" path="res://Scenes/moveable.tscn" id="4_opn2v"]
[ext_resource type="Texture2D" uid="uid://bo5u4ycq1ett" path="res://Assets/Images/pillar.png" id="5_jk2yk"]
[ext_resource type="Texture2D" uid="uid://dgfsbrliddiwd" path="res://Assets/Images/urn-1.png" id="6_otlb7"]
[ext_resource type="PackedScene" uid="uid://cnfrxpljq8b8q" path="res://Scenes/nonmoveable.tscn" id="7_hgq1i"]
[ext_resource type="Texture2D" uid="uid://du8yvhhd3cgnu" path="res://Assets/Tilesets/tiles.png" id="8_wbnnf"]
[ext_resource type="PackedScene" uid="uid://6pic503w7xpl" path="res://Scenes/ghost.tscn" id="9_qgayc"]
[ext_resource type="PackedScene" uid="uid://cctthl1q1bekw" path="res://Scenes/guy.tscn" id="10_foaqw"]
[ext_resource type="PackedScene" uid="uid://k2kwvg3avs8t" path="res://Scenes/rose.tscn" id="11_lsqbk"]
[ext_resource type="PackedScene" uid="uid://di2p66442rfuh" path="res://Scenes/pause_menu.tscn" id="12_ftjqm"]
[ext_resource type="AudioStream" uid="uid://ddu0w3lrpnmpa" path="res://Assets/Music/Main Game Theme.mp3" id="13_it513"]
[ext_resource type="AudioStream" uid="uid://d1agwc2061v6m" path="res://Assets/Music/Rose Got 2.mp3" id="14_0a0nr"]
[ext_resource type="AudioStream" uid="uid://dla7bd1xbf77j" path="res://Assets/Music/Death Sound=You Failed.mp3" id="15_xuud8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a7ea"]
size = Vector2(20.9922, 30.5048)

[sub_resource type="LabelSettings" id="LabelSettings_uwisk"]
font = ExtResource("3_la4le")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_i6bqf"]
resource_local_to_scene = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n80jh"]
resource_local_to_scene = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_q21to"]
resource_local_to_scene = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nqbrd"]
resource_local_to_scene = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_du1gc"]
texture = ExtResource("8_wbnnf")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
7:2/0 = 0
7:3/0 = 0
7:4/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:3/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
6:3/0 = 0
6:2/0 = 0
6:1/0 = 0
5:1/0 = 0
4:1/0 = 0
7:5/0 = 0
7:6/0 = 0
7:7/0 = 0
7:8/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
2:9/0 = 0
1:9/0 = 0
0:9/0 = 0
0:10/0 = 0
0:8/0 = 0
1:8/0 = 0
1:7/0 = 0
1:6/0 = 0
1:5/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
2:6/0 = 0
2:5/0 = 0
2:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
6:7/0 = 0
6:6/0 = 0
6:5/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
4:7/0 = 0
4:6/0 = 0
4:5/0 = 0
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_bxvyr"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_du1gc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d15yg"]
texture = ExtResource("8_wbnnf")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
7:2/0 = 0
7:3/0 = 0
7:4/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:3/0 = 0
4:2/0 = 0
5:2/0 = 0
5:3/0 = 0
6:3/0 = 0
6:2/0 = 0
6:1/0 = 0
5:1/0 = 0
4:1/0 = 0
7:5/0 = 0
7:6/0 = 0
7:7/0 = 0
7:8/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
2:9/0 = 0
1:9/0 = 0
0:9/0 = 0
0:10/0 = 0
0:8/0 = 0
1:8/0 = 0
1:7/0 = 0
1:6/0 = 0
1:5/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
2:6/0 = 0
2:5/0 = 0
2:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
6:7/0 = 0
6:6/0 = 0
6:5/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
4:7/0 = 0
4:6/0 = 0
4:5/0 = 0
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_hrj3c"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_d15yg")

[node name="Level4" type="Node2D"]
script = ExtResource("1_ndqic")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundImage" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(620, 395)
scale = Vector2(1.06827, 0.785489)
texture = ExtResource("2_vqlhw")

[node name="Background" type="Area2D" parent="CanvasLayer"]
scale = Vector2(29.4962, 16.9264)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Background"]
position = Vector2(19.5137, 20.6852)
scale = Vector2(2.29468, 1.46367)
shape = SubResource("RectangleShape2D_5a7ea")

[node name="RestartLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 30.0
offset_top = 18.0
offset_right = 140.0
offset_bottom = 53.0
scale = Vector2(1.71487, 1.71487)
text = "RESTARTING..."
label_settings = SubResource("LabelSettings_uwisk")

[node name="YouShouldRestartLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 274.0
offset_top = 103.0
offset_right = 421.0
offset_bottom = 138.0
scale = Vector2(1.71487, 1.71487)
text = "Press R to restart..."
label_settings = SubResource("LabelSettings_uwisk")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.537255, 0.678431, 0.666667, 1)

[node name="Rose2" parent="." instance=ExtResource("11_lsqbk")]
position = Vector2(1242, 314)

[node name="Pillar1" parent="." instance=ExtResource("4_opn2v")]
position = Vector2(107, 412)
physics_material_override = SubResource("PhysicsMaterial_i6bqf")

[node name="Shape" parent="Pillar1" index="0"]
position = Vector2(-1.63685, -4.04037)
scale = Vector2(0.277485, 0.277485)

[node name="Whitecircle" parent="Pillar1" index="1"]
position = Vector2(-6.50877, -4.78409)
scale = Vector2(1.10994, 0.481437)

[node name="Sprite" parent="Pillar1" index="2"]
position = Vector2(-0.63686, -4.04037)
rotation = 1.5708
scale = Vector2(0.653118, 0.601581)
texture = ExtResource("5_jk2yk")

[node name="GuyFinder" parent="Pillar1" index="3"]
position = Vector2(-1.63685, -3.04037)
scale = Vector2(0.277485, 0.277485)

[node name="Jug4" parent="." instance=ExtResource("4_opn2v")]
position = Vector2(702, 306)
physics_material_override = SubResource("PhysicsMaterial_n80jh")

[node name="Shape" parent="Jug4" index="0"]
position = Vector2(3.84216, 2.37149)
scale = Vector2(0.143283, 0.471191)

[node name="Whitecircle" parent="Jug4" index="1"]
position = Vector2(-1.02985, 1.62776)
scale = Vector2(0.573132, 0.817517)

[node name="Sprite" parent="Jug4" index="2"]
position = Vector2(4.8421, 2.37151)
scale = Vector2(0.305021, 0.284993)
texture = ExtResource("6_otlb7")

[node name="GuyFinder" parent="Jug4" index="3"]
position = Vector2(3.84216, 3.37149)
scale = Vector2(0.143283, 0.471191)

[node name="Jug6" parent="." instance=ExtResource("4_opn2v")]
position = Vector2(1143, 297)
physics_material_override = SubResource("PhysicsMaterial_q21to")

[node name="Shape" parent="Jug6" index="0"]
position = Vector2(-5.61957, -42.9112)
scale = Vector2(0.292513, 0.961939)

[node name="Whitecircle" parent="Jug6" index="1"]
position = Vector2(-10.4916, -43.6549)
scale = Vector2(1.17005, 1.66896)

[node name="Sprite" parent="Jug6" index="2"]
position = Vector2(-4.61963, -42.9111)
scale = Vector2(0.622702, 0.581813)
texture = ExtResource("6_otlb7")

[node name="GuyFinder" parent="Jug6" index="3"]
position = Vector2(-5.61957, -41.9112)
scale = Vector2(0.292513, 0.961939)

[node name="Jug5" parent="." instance=ExtResource("4_opn2v")]
position = Vector2(702, 222)
physics_material_override = SubResource("PhysicsMaterial_nqbrd")

[node name="Shape" parent="Jug5" index="0"]
position = Vector2(3.84216, 2.37149)
scale = Vector2(0.143283, 0.471191)

[node name="Whitecircle" parent="Jug5" index="1"]
position = Vector2(-1.02985, 1.62776)
scale = Vector2(0.573132, 0.817517)

[node name="Sprite" parent="Jug5" index="2"]
position = Vector2(4.8421, 2.37151)
scale = Vector2(0.305021, 0.284993)
texture = ExtResource("6_otlb7")

[node name="GuyFinder" parent="Jug5" index="3"]
position = Vector2(3.84216, 3.37149)
scale = Vector2(0.143283, 0.471191)

[node name="Begfinbuilding" type="Node2D" parent="."]
position = Vector2(-329, -206)

[node name="Building3" parent="Begfinbuilding" instance=ExtResource("7_hgq1i")]
position = Vector2(113, 585)
scale = Vector2(1.49662, 4.7908)

[node name="Layer1" type="TileMapLayer" parent="Begfinbuilding"]
use_parent_material = true
position = Vector2(-136, -214)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAAFAAUAAAAHAAMAAAAAAAUAAAAHAAMAABAEAAUAAAAGAAMAAAADAAUAAAAGAAMAAAACAAUAAAAGAAMAAAABAAUAAAAGAAMAAAAFAAYAAAAHAAgAAAAFAAcAAAAHAAYAAAAFAAgAAAABAAYAADAFAAkAAAABAAcAAAAFAAoAAAAHAAgAAAAFAAsAAAAHAAkAAAAAAAsAAAAHAAkAABABAAsAAAADAAkAAAACAAsAAAADAAkAAAADAAsAAAADAAkAAAAEAAsAAAADAAkAAAAAAAoAAAAHAAgAABAAAAkAAAAHAAgAABAAAAgAAAAHAAgAABAAAAcAAAAHAAgAABAAAAYAAAAHAAgAABABAAYAAAAEAAEAAAABAAcAAAABAAMAAAACAAcAAAABAAMAAAACAAgAAAADAAYAAAACAAkAAAABAAUAAAADAAkAAAABAAUAAAAEAAkAAAABAAUAAAAEAAoAAAAEAAEAAAAEAAgAAAABAAUAAAAEAAcAAAADAAYAAAADAAcAAAABAAMAAAADAAYAAAAEAAEAAAACAAYAAAABAAMAAAAEAAYAAAAEAAEAAAADAAgAAAABAAQAAAACAAoAAAAEAAEAAAADAAoAAAAEAAEAAAABAAoAAAAEAAEAAAABAAkAAAAEAAEAAAABAAgAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_bxvyr")

[node name="Firstbuilding" type="Node2D" parent="."]
position = Vector2(43, 245)

[node name="Building3" parent="Firstbuilding" instance=ExtResource("7_hgq1i")]
position = Vector2(114, 373)
scale = Vector2(1.49662, 2.0708)

[node name="Layer1" type="TileMapLayer" parent="Firstbuilding"]
use_parent_material = true
position = Vector2(-136, -214)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAAFAAUAAAAHAAMAAAAAAAUAAAAHAAMAABAEAAUAAAAGAAMAAAADAAUAAAAGAAMAAAACAAUAAAAGAAMAAAABAAUAAAAGAAMAAAAFAAYAAAAHAAgAAAAFAAcAAAAHAAYAAAAFAAgAAAABAAYAADAFAAkAAAABAAcAAAAFAAoAAAAHAAgAAAAFAAsAAAAHAAkAAAAAAAsAAAAHAAkAABABAAsAAAADAAkAAAACAAsAAAADAAkAAAADAAsAAAADAAkAAAAEAAsAAAADAAkAAAAAAAoAAAAHAAgAABAAAAkAAAAHAAgAABAAAAgAAAAHAAgAABAAAAcAAAAHAAgAABAAAAYAAAAHAAgAABABAAYAAAAEAAEAAAABAAcAAAABAAMAAAACAAcAAAABAAMAAAACAAgAAAADAAYAAAACAAkAAAABAAUAAAADAAkAAAABAAUAAAAEAAkAAAABAAUAAAAEAAoAAAAEAAEAAAAEAAgAAAABAAUAAAAEAAcAAAADAAYAAAADAAcAAAABAAMAAAADAAYAAAAEAAEAAAACAAYAAAABAAMAAAAEAAYAAAAEAAEAAAADAAgAAAABAAQAAAACAAoAAAAEAAEAAAADAAoAAAAEAAEAAAABAAoAAAAEAAEAAAABAAkAAAAEAAEAAAABAAgAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_bxvyr")

[node name="Abovetower" type="Node2D" parent="."]
position = Vector2(60, 30)

[node name="Building4" parent="Abovetower" instance=ExtResource("7_hgq1i")]
position = Vector2(938, -117)
scale = Vector2(0.240035, 3.2122)

[node name="Layer1" type="TileMapLayer" parent="Abovetower"]
use_parent_material = true
position = Vector2(898, -798)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAAAAAUAAAAHAAMAABAAAAsAAAAHAAkAABAAAAoAAAAHAAgAABAAAAkAAAAHAAgAABAAAAgAAAAHAAgAABAAAAcAAAAHAAgAABAAAAYAAAAHAAgAABA=")
tile_set = SubResource("TileSet_bxvyr")

[node name="Middlebuilding" type="Node2D" parent="."]
position = Vector2(35, 174)

[node name="Building8" parent="Middlebuilding" instance=ExtResource("7_hgq1i")]
position = Vector2(660, 531)
scale = Vector2(0.770038, 3.96006)

[node name="Layer1" type="TileMapLayer" parent="Middlebuilding"]
use_parent_material = true
position = Vector2(539, -225)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAAAAAUAAAAHAAMAABAAAAsAAAAHAAkAABAAAAoAAAAHAAgAABAAAAkAAAAHAAgAABAAAAcAAAAHAAgAABAAAAYAAAAHAAgAABABAAYAAAAEAAEAAAACAAYAAAABAAMAAAACAAUAAAAGAAMAAAABAAUAAAAGAAMAAAACAAsAAAADAAkAAAABAAsAAAADAAkAAAACAAcAAAABAAMAAAABAAcAAAABAAMAAAABAAgAAAAEAAEAAAABAAkAAAAEAAEAAAABAAoAAAAEAAEAAAACAAgAAAADAAcAAAACAAkAAAAEAAEAAAACAAoAAAAEAAEAAAAAAAgAAAAHAAgAADA=")
tile_set = SubResource("TileSet_bxvyr")

[node name="Finalbuilding" type="Node2D" parent="."]
position = Vector2(1275, 373)

[node name="Building4" parent="Finalbuilding" instance=ExtResource("7_hgq1i")]
position = Vector2(-187, 255)
scale = Vector2(1.44003, 3.2122)

[node name="Layer0" type="TileMapLayer" parent="Finalbuilding"]
use_parent_material = true
position = Vector2(-88, -32)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAABAAYAAAAHAAkAAAD8/wYAAAAHAAkAABD9/wYAAAADAAkAAAD+/wYAAAADAAkAAAD//wYAAAADAAkAAAAAAAYAAAADAAkAAAABAAUAAAAHAAgAAAABAAQAAAAHAAgAAAABAAMAAAAHAAgAAAABAAIAAAAHAAgAAAABAAEAAAAHAAgAAAABAAAAAAAHAAMAAAD8/wAAAAAHAAMAABD9/wAAAAAGAAMAAAD+/wAAAAAGAAMAAAD//wAAAAAGAAMAAAAAAAAAAAAGAAMAAAD8/wUAAAAHAAgAABD8/wQAAAAHAAgAABD9/wQAAAAEAAEAAAD9/wMAAAAEAAEAAAD8/wMAAAAHAAgAABD8/wIAAAAHAAgAABD8/wEAAAAHAAgAABD9/wUAAAAEAAEAAAD+/wUAAAAAAAMAAAD//wUAAAAAAAIAAAAAAAUAAAAEAAEAAAAAAAQAAAAFAAYAAAD//wQAAAABAAEAAAD+/wQAAAAAAAIAAAD+/wMAAAAFAAYAADD9/wIAAAAEAAEAAAD9/wEAAAAEAAEAAAD+/wEAAAAEAAEAAAD//wEAAAAFAAYAADAAAAEAAAADAAcAAAAAAAIAAAAGAAYAADAAAAMAAAABAAEAAAD//wMAAAACAAIAAAD//wIAAAACAAEAAAD+/wIAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_hrj3c")

[node name="Endbuilding" type="Node2D" parent="."]
position = Vector2(1408, -293)

[node name="Building3" parent="Endbuilding" instance=ExtResource("7_hgq1i")]
position = Vector2(100, 464)
scale = Vector2(1.49662, 2.0708)

[node name="Layer1" type="TileMapLayer" parent="Endbuilding"]
use_parent_material = true
position = Vector2(-132, -215)
scale = Vector2(10.053, 10.0402)
tile_map_data = PackedByteArray("AAAFAAUAAAAHAAMAAAAAAAUAAAAHAAMAABAEAAUAAAAGAAMAAAADAAUAAAAGAAMAAAACAAUAAAAGAAMAAAABAAUAAAAGAAMAAAAFAAYAAAAHAAgAAAAFAAcAAAAHAAYAAAAFAAgAAAABAAYAADAFAAkAAAABAAcAAAAFAAoAAAAHAAgAAAAFAAsAAAAHAAkAAAAAAAsAAAAHAAkAABABAAsAAAADAAkAAAACAAsAAAADAAkAAAADAAsAAAADAAkAAAAEAAsAAAADAAkAAAAAAAoAAAAHAAgAABAAAAkAAAAHAAgAABAAAAgAAAAHAAgAABAAAAcAAAAHAAgAABAAAAYAAAAHAAgAABABAAYAAAAEAAEAAAABAAcAAAABAAMAAAACAAcAAAABAAMAAAACAAgAAAADAAYAAAACAAkAAAABAAUAAAADAAkAAAABAAUAAAAEAAkAAAABAAUAAAAEAAoAAAAEAAEAAAAEAAgAAAABAAUAAAAEAAcAAAADAAYAAAADAAcAAAABAAMAAAADAAYAAAAEAAEAAAACAAYAAAABAAMAAAAEAAYAAAAEAAEAAAADAAgAAAABAAQAAAACAAoAAAAEAAEAAAADAAoAAAAEAAEAAAABAAoAAAAEAAEAAAABAAkAAAAEAAEAAAABAAgAAAAEAAEAAAA=")
tile_set = SubResource("TileSet_bxvyr")

[node name="Ghost" parent="." instance=ExtResource("9_qgayc")]
position = Vector2(382, 201)

[node name="Guy" parent="." instance=ExtResource("10_foaqw")]
position = Vector2(61, 331)

[node name="PauseMenu" parent="." instance=ExtResource("12_ftjqm")]
visible = false

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_it513")
autoplay = true
bus = &"Music"

[node name="EndMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_0a0nr")
bus = &"Music"

[node name="DeadMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_xuud8")
bus = &"Music"

[connection signal="input_event" from="CanvasLayer/Background" to="." method="_on_background_input_event"]

[editable path="Pillar1"]
[editable path="Jug4"]
[editable path="Jug6"]
[editable path="Jug5"]
